--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fayis ismail</title>
+    <title>Fayis Ismail</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div class="container">
         <img src="{{ url_for('static', filename='profile.jpg') }}" class="profile-img" alt="Profile">
-        <h1>Fayis ismail</h1>
+        <h1>Fayis Ismail</h1>
         <p>Creative AI | VFX Artist | CGI Compositor</p>
         <div class="links">
             <a href="https://github.com/Evolve9847" target="_blank">GitHub</a>
