--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,8 @@
 }
 
 body {
-    min-height: 100vh;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,6 +18,7 @@ body {
     background-size: cover;
     color: white;
     text-align: center;
+    overflow: hidden;
 }
 
 .container {
@@ -82,7 +84,7 @@ p {
     transform: scale(1.1);
 }
 
-@media (max-width: 500px) {
+@media (max-width: 768px) {
     .container {
         width: 100%;
         padding: 20px;
