--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <img src="{{ url_for('static', filename='profile.jpg') }}" class="profile-img" alt="Profile">
         <h1>Fayis Ismail</h1>
-        <p>Creative AI | VFX Artist | CGI Compositor</p>
+        <p>AI Enthusiast | VFX Artist | CGI Compositor</p>
         <div class="links">
             <a href="https://github.com/Evolve9847" target="_blank">GitHub</a>
             <a href="https://m.imdb.com/name/nm12955860/?ref_=ext_shr_lnk" target="_blank">IMDb</a>
@@ -24,7 +24,7 @@
     <!-- Chat Popup -->
     <div class="chat-popup" id="chatPopup">
         <div class="chat-header">
-            <h2>Meta AI</h2>
+            <h2>AI</h2>
         </div>
         <div class="chat-messages" id="chatMessages"></div>
         <div class="chat-input">
