--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Fayis Ismail</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- ✅ Google Site Verification -->
+    <meta name="google-site-verification" content="google8e23e852dfffb424.html">
+
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
