--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- ✅ Google Site Verification -->
-    <meta name="google-site-verification" content="google8e23e852dfffb424.html">
+    <meta name="google-site-verification" content="uG79bVZHFA28sFsrulTdHS">
 
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
