--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,7 @@
       <a href="https://github.com/Evolve9847" target="_blank">GitHub</a>
       <a href="https://m.imdb.com/name/nm12955860/" target="_blank">IMDb</a>
       <a href="https://www.linkedin.com/in/fayis-ismail" target="_blank">LinkedIn</a>
+      <a href="https://www.https://www.instagram.com/evo_l_ve" target="_blank">Instagram.</a>
     </div>
   </div>
 
