--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
       "https://github.com/Evolve9847",
       "https://www.linkedin.com/in/fayis-ismail",
       "https://m.imdb.com/name/nm12955860/"
+      "https://www.instagram.com/evo_l_ve/?igsh=MW8xcTg2NzMyYndvcw%3D%3D#"
     ],
     "jobTitle": "CGI Compositor & AI Enthusiast"
   }
@@ -36,7 +37,7 @@
       <a href="https://github.com/Evolve9847" target="_blank">GitHub</a>
       <a href="https://m.imdb.com/name/nm12955860/" target="_blank">IMDb</a>
       <a href="https://www.linkedin.com/in/fayis-ismail" target="_blank">LinkedIn</a>
-      <a href="https://www.https://www.instagram.com/evo_l_ve" target="_blank">Instagram.</a>
+      <a href="https://www.instagram.com/evo_l_ve/?igsh=MW8xcTg2NzMyYndvcw%3D%3D#" target="_blank">Instagram.</a>
     </div>
   </div>
 
