--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
       <a href="https://github.com/Evolve9847" target="_blank">GitHub</a>
       <a href="https://m.imdb.com/name/nm12955860/" target="_blank">IMDb</a>
       <a href="https://www.linkedin.com/in/fayis-ismail" target="_blank">LinkedIn</a>
-      <a href="https://www.instagram.com/evo_l_ve?utm_source=qr&igsh=ZGF0ZjRjeWo5ajh4" target="_blank">Instagram</a>
+      <a href="https://www.instagram.com/fayis_ismail_/" target="_blank">Instagram</a>
     </div>
   </div>
 
